update with filters

--- a/templates/app/base.html.twig
+++ b/templates/app/base.html.twig
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css" rel="stylesheet"/>
+        <script   src="https://code.jquery.com/jquery-3.6.0.slim.min.js"   integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="   crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -13,24 +16,40 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+            
                 <a class="navbar-brand" href="#"><img height="35px" src="{# LOGO #}"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" href="#">Inicio <span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="{{path("app_home")}}">Inicio <span class="sr-only">(current)</span></a>
                         <a class="nav-link" href="{{ path("listConcert") }}">Conciertos</a>
                         <a class="nav-link" href="{{ path("listFestival") }}">Festivales</a>
+                        {% if is_granted('ROLE_USER')%}
+                        <a class="nav-link" href="{{ path("myConcerts") }}">Mis Conciertos</a>
+                        <a class="nav-link" href="{{ path("myFestivals") }}">Mis Festivales</a>
+                        {% endif %}
+                        {% if is_granted('ROLE_ADMIN')%}
+                        <a class="nav-link" href="{{ path("addConcert") }}">Añadir Concierto</a>
+                        <a class="nav-link" href="{{ path("addFest") }}">Añadir Festival</a>
+                        <a class="nav-link" href="{{ path("addCategory") }}">Añadir Categoría</a>
+                        {% endif %}
+                        {% if not is_granted('ROLE_USER')%}
+                        <a class="nav-link" href="{{ path("app_login")}}">LogIn</a>
+                        {% endif %}
+                        {% if is_granted('ROLE_USER')%}
+                        <a class="nav-link" href="{{ path("app_logout")}}">Salir</a>
+                        {% endif %}
                     </div>
                 </div>
-            </nav>
+            </div>
+        </nav>
+        <div class="container">
             {% block body %}<h1>ConciertApp</h1>{% endblock %}
             {% block js %} {% endblock %}
-
-            <div id="myDiv"></div>
         </div>
     </body>
 </html>
