--- a/templates/app/festivals/createfestival.html.twig
+++ b/templates/app/festivals/createfestival.html.twig
@@ -2,11 +2,6 @@
 {% block body %}
     {{ form_start(festivalForm) }}
         {{ form_widget(festivalForm) }}
-        <button type="submit">Añadir</button>
+        <button class="btn btn-lg btn-primary" type="submit">Añadir</button>
     {{ form_end(festivalForm) }}
-{% endblock %}
-{% block stylesheets %}
-<style type="text/css">
-    color:red
-</style>
 {% endblock %}
