--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,4 +39,6 @@
         Sign in
     </button>
 </form>
+<p>¿No estás registrado? </p>
+<a href="{{ path("register")}}" class="btn btn-primary">Registrate</a>
 {% endblock %}
