--- a/templates/app/concerts/createconcert.html.twig
+++ b/templates/app/concerts/createconcert.html.twig
@@ -2,11 +2,6 @@
 {% block body %}
     {{ form_start(concertForm) }}
         {{ form_widget(concertForm) }}
-        <button type="submit">Añadir</button>
+        <button class="btn btn-lg btn-primary" type="submit">Añadir</button>
     {{ form_end(concertForm) }}
-{% endblock %}
-{% block stylesheets %}
-<style type="text/css">
-    color:red
-</style>
 {% endblock %}
