--- a/templates/app/users/createuser.html.twig
+++ b/templates/app/users/createuser.html.twig
@@ -2,11 +2,6 @@
 {% block body %}
     {{ form_start(userForm) }}
         {{ form_widget(userForm) }}
-        <button type="submit">Añadir</button>
+        <button class="btn btn-lg btn-primary" type="submit">Añadir</button>
     {{ form_end(userForm) }}
-{% endblock %}
-{% block stylesheets %}
-<style type="text/css">
-    color:red
-</style>
 {% endblock %}
